Netflow input: Improve session reset detection and allow disabling (#14904)
- New NetFlow option detect_sequence_reset

Add option to allow disabling sequence number tracking, which can cause
too many lost flows in some environments.

- Improve session reset detection in Netflow

Session reset detection was too sensitive and not resilent against
out-of-order UDP packets.

- Make logDebugWrapper thread safe

This structure wasn't thread safe but it was used by different threads
which can cause a crash.

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -220,6 +220,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Update Logstash module's Grok patterns to support Logstash 7.4 logs. {pull}14743[14743]
 - Fix a problem in Filebeat input httpjson where interval is not used as time.Duration. {issue}14752[14752] {pull}14753[14753]
 - Fix SSL config in input.yml for Filebeat httpjson input in the MISP module. {pull}14767[14767]
+- Fix session reset detection and a crash in Netflow input. {pull}14904[14904]
 
 *Heartbeat*
 
