--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -391,6 +391,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Enable TLS 1.3 in all beats. {pull}12973[12973]
 - Enable DEP (Data Execution Protection) for Windows packages. {pull}15149[15149]
 - Spooling to disk creates a lockfile on each platform. {pull}15338[15338]
+- Fingerprint processor adds a new xxhash hashing algorithm {pull}15418[15418]
 
 *Auditbeat*
 
