Prometheus remote write endpoint (#16609)

--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -31595,6 +31595,12 @@ type: object
 
 --
 
+[float]
+=== remote_write
+
+remote write metrics from Prometheus server
+
+
 [[exported-fields-rabbitmq]]
 == RabbitMQ fields
 
