--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -237,6 +237,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Add Prometheus remote write endpoint {pull}16609[16609]
 - Release STAN module as GA. {pull}16980[16980]
 - Release ActiveMQ module as GA. {issue}17047[17047] {pull}17049[17049]
+- Release Zookeeper/connection module as GA. {issue}14281[14281] {pull}17043[17043]
 
 *Packetbeat*
 
