--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -260,6 +260,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Release Zookeeper/connection module as GA. {issue}14281[14281] {pull}17043[17043]
 - Add support for CouchDB v2 {issue}16352[16352] {pull}16455[16455]
 - Replace vpc metricset into vpn, transitgateway and natgateway metricsets. {pull}16892[16892]
+- Release Oracle module as GA. {issue}14279[14279] {pull}16833[16833]
 
 *Packetbeat*
 
