--- a/metricbeat/docs/modules/googlecloud.asciidoc
+++ b/metricbeat/docs/modules/googlecloud.asciidoc
@@ -104,6 +104,14 @@ metricbeat.modules:
     - pubsub
     - loadbalancing
   zone: "us-central1-a"
+  project_id: "your project id"
+  credentials_file_path: "your JSON credentials file path"
+  exclude_labels: false
+  period: 300s
+
+- module: googlecloud
+  metricsets:
+    - storage
   region: "us-central1"
   project_id: "your project id"
   credentials_file_path: "your JSON credentials file path"
@@ -122,9 +130,13 @@ The following metricsets are available:
 
 * <<metricbeat-metricset-googlecloud-pubsub,pubsub>>
 
+* <<metricbeat-metricset-googlecloud-storage,storage>>
+
 include::googlecloud/compute.asciidoc[]
 
 include::googlecloud/loadbalancing.asciidoc[]
 
 include::googlecloud/pubsub.asciidoc[]
+
+include::googlecloud/storage.asciidoc[]
 
