--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -281,6 +281,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Release vsphere module as GA. {issue}15798[15798] {pull}17119[17119]
 - Add Storage metricsets to GCP module {pull}15598[15598]
 - Added documentation for running Metricbeat in Cloud Foundry. {pull}17275[17275]
+- Add final tests and move label to GA for the azure module in metricbeat. {pull}17319[17319]
 
 *Packetbeat*
 
