--- a/libbeat/processors/add_process_metadata/docs/add_process_metadata.asciidoc
+++ b/libbeat/processors/add_process_metadata/docs/add_process_metadata.asciidoc
@@ -80,6 +80,11 @@ to `/kubepods` and `/docker`. This is the prefix where the container ID is
 inside cgroup. For different runtime configurations of Kubernetes or Docker,
 the `cgroup_prefixes` can be set to overwrite the defaults.
 
+`cgroup_regex`:: (Optional) By default, the container id is extracted from 
+cgroup file based on `cgroup_prefixes`. This can be overwritten by specifying 
+regular expression with capture group for capturing container id from cgroup 
+path. For example: `^\/.+\/.+\/.+\/([0-9a-f]{64}).*`
+
 `cgroup_cache_expire_time`:: (Optional) By default, the 
 `cgroup_cache_expire_time` is set to 30 seconds. This is the length of time
 before cgroup cache elements expire in seconds. It can be set to 0 to disable
