Add a documentation item about $ resoltion in configs (#17621)
* init commit, try to add asciidoc with link

* fix misc errors

* add extra newline to fix asciidoc

Co-Authored-By: DeDe Morton <dede.morton@elastic.co>

* Fix conditional section

Co-authored-by: DeDe Morton <dede.morton@elastic.co>

--- a/libbeat/docs/index.asciidoc
+++ b/libbeat/docs/index.asciidoc
@@ -15,6 +15,7 @@ include::{asciidoc-dir}/../../shared/attributes.asciidoc[]
 :discuss_forum: beats/{beatname_lc}
 :beat_default_index_prefix: {beatname_lc}
 :has_ml_jobs:
+:no_keystore:
 
 include::{libbeat-dir}/shared-beats-attributes.asciidoc[]
 
