CEF CheckPoint: adjust fields for forward compatibility (#17681)
This PR makes some changes to CEF module's custom mappings for Check Point
devices to ensure compatibility with the upcoming checkpoint module.

Check Point has its custom log format, for which a new module is being
prepared. The idea behind this new module as well as CEF custom mappings for
Check Point (this PR), is to use ECS whenever possible and map the rest
under checkpoint.* using the original field name from Check Point.

In the original PR for CEF, a few mistakes had been done in field names and
types. Also taking the opportunity to change some ECS mappings.

Related #16907 #17682

--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -4895,7 +4895,7 @@ type: keyword
 --
 Confidence level determined.
 
-type: keyword
+type: integer
 
 --
 
@@ -4989,15 +4989,6 @@ type: long
 
 --
 
-*`checkpoint.file_hash`*::
-+
---
-File hash (SHA1 or MD5).
-
-type: keyword
-
---
-
 *`checkpoint.frequency`*::
 +
 --
@@ -5052,6 +5043,15 @@ type: keyword
 
 --
 
+*`checkpoint.malware_family`*::
++
+--
+Malware family.
+
+type: keyword
+
+--
+
 *`checkpoint.peer_gateway`*::
 +
 --
@@ -5066,7 +5066,7 @@ type: ip
 --
 Protection performance impact.
 
-type: keyword
+type: integer
 
 --
 
@@ -5124,16 +5124,25 @@ type: keyword
 
 --
 
-*`checkpoint.malware_status`*::
+*`checkpoint.spyware_name`*::
 +
 --
-Malware status.
+Spyware name.
 
 type: keyword
 
 --
 
-*`checkpoint.subscription_expiration`*::
+*`checkpoint.spyware_status`*::
++
+--
+Spyware status.
+
+type: keyword
+
+--
+
+*`checkpoint.subs_exp`*::
 +
 --
 The expiration date of the subscription.
@@ -5191,24 +5200,6 @@ type: keyword
 +
 --
 Virus name.
-
-type: keyword
-
---
-
-*`checkpoint.malware_name`*::
-+
---
-Malware name.
-
-type: keyword
-
---
-
-*`checkpoint.malware_family`*::
-+
---
-Malware family.
 
 type: keyword
 
