Enable keystore for autodiscover static configuration (#16306)

--- a/libbeat/docs/shared-autodiscover.asciidoc
+++ b/libbeat/docs/shared-autodiscover.asciidoc
@@ -18,6 +18,7 @@ to set conditions that, when met, launch specific configurations.
 On start, {beatname_uc} will scan existing containers and launch the proper configs for them. Then it will watch for new
 start/stop events. This ensures you don't need to worry about state, but only define your desired configs.
 
+ifdef::autodiscoverDocker[]
 [float]
 ===== Docker
 
@@ -124,6 +125,10 @@ running configuration for a container, 60s by default.
 =======================================
 endif::[]
 
+endif::autodiscoverDocker[]
+
+
+ifdef::autodiscoverKubernetes[]
 [float]
 ===== Kubernetes
 
@@ -243,6 +248,7 @@ running configuration for a container, 60s by default.
 
 
 include::../../{beatname_lc}/docs/autodiscover-kubernetes-config.asciidoc[]
+endif::autodiscoverKubernetes[]
 
 [float]
 ===== Manually Defining Ports with Kubernetes
