Fix Cisco ASA/FTD msgs that use a host name as NAT address (#18376)
Sometimes the mapped source/destination IP field of an event is a hostname
instead of an IP address. This caused ingestion of the event to fail.

This patch makes the asa-ftd-pipeline to only populate those fields when
a valid IP address is found.

In the future we may want to revisit this if .nat.domain or
.nat.address fields become available.

--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -9521,6 +9521,16 @@ type: ip
 
 --
 
+*`cisco.asa.mapped_source_host`*::
++
+--
+The translated source host.
+
+
+type: keyword
+
+--
+
 *`cisco.asa.mapped_source_port`*::
 +
 --
@@ -9538,6 +9548,16 @@ The translated destination IP address.
 
 
 type: ip
+
+--
+
+*`cisco.asa.mapped_destination_host`*::
++
+--
+The translated destination host.
+
+
+type: keyword
 
 --
 
@@ -9710,6 +9730,16 @@ type: ip
 
 --
 
+*`cisco.ftd.mapped_source_host`*::
++
+--
+The translated source host.
+
+
+type: keyword
+
+--
+
 *`cisco.ftd.mapped_source_port`*::
 +
 --
@@ -9727,6 +9757,16 @@ The translated destination IP address. Use ECS destination.nat.ip.
 
 
 type: ip
+
+--
+
+*`cisco.ftd.mapped_destination_host`*::
++
+--
+The translated destination host.
+
+
+type: keyword
 
 --
 
