Address Okta input issue #18530 (#18534)
* Add check for time because time.Until does not correctly handle a time that is earlier than time.Now().

* Update getRateLimit to handle a rate limit time is earlier than now.

* Add some additional safe guard to check Ticker

* Add descriptions for getRateLimit function and test functions.

* Update CHANGELOG.next.asciidoc

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -135,6 +135,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Improve cisco asa and ftd pipelines' failure handler to avoid mapping temporary fields. {issue}18391[18391] {pull}18392[18392]
 - Fix PANW module wrong mappings for bytes and packets counters. {issue}18522[18522] {pull}18525[18525]
 - Fixed ingestion of some Cisco ASA and FTD messages when a hostname was used instead of an IP for NAT fields. {issue}14034[14034] {pull}18376[18376]
+- Fix a rate limit related issue in httpjson input for Okta module. {issue}18530[18530] {pull}18534[18534]
 
 *Heartbeat*
 
