Fix fields in kvm status metricset (#18514)

--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -26873,6 +26873,26 @@ kvm module
 
 
 
+*`kvm.id`*::
++
+--
+Domain id
+
+
+type: long
+
+--
+
+*`kvm.name`*::
++
+--
+Domain name
+
+
+type: keyword
+
+--
+
 [float]
 === kvm
 
@@ -26940,37 +26960,10 @@ status
 
 
 
-[float]
-=== stat
-
-Memory stat
-
-
-
-*`kvm.status.stat.state`*::
+*`kvm.status.state`*::
 +
 --
-domain state
-
-
-type: keyword
-
---
-
-*`kvm.status.id`*::
-+
---
-Domain id
-
-
-type: long
-
---
-
-*`kvm.status.name`*::
-+
---
-Domain name
+Domain state
 
 
 type: keyword
